This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Win32 compiler warning in PyBytes_Concat
Type: behavior Stage: resolved
Components: Build, Windows Versions: Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: zach.ware Nosy List: nikratio, pitrou, python-dev, tim.golden, vstinner, zach.ware
Priority: normal Keywords:

Created on 2014-05-05 19:16 by zach.ware, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (5)
msg217942 - (view) Author: Zachary Ware (zach.ware) * (Python committer) Date: 2014-05-05 19:16
Issue #21377 introduced a compiler warning on Windows:

..\Objects\bytesobject.c(2824): warning C4018: '>' : signed/unsigned mismatch [P:\ath\to\cpython\PCbuild\pythoncore.vcxproj]
msg217980 - (view) Author: Zachary Ware (zach.ware) * (Python committer) Date: 2014-05-06 13:21
Declaring oldsize as Py_ssize_t instead of size_t at Objects/bytesobject.c:2812 takes care of the warning, but I'm not comfortable saying that's a correct change.
msg217992 - (view) Author: Tim Golden (tim.golden) * (Python committer) Date: 2014-05-06 16:11
Well PyBytes_GET_SIZE is documented as returning a Py_ssize_t so I'd say it's perfectly valid.
msg217993 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2014-05-06 16:43
New changeset 6234f4caba57 by Zachary Ware in branch 'default':
Issue #21442: Fix MSVC compiler warning introduced by issue21377.
http://hg.python.org/cpython/rev/6234f4caba57
msg217995 - (view) Author: Zachary Ware (zach.ware) * (Python committer) Date: 2014-05-06 16:45
I should have looked a little harder, thanks Tim!
History
Date User Action Args
2022-04-11 14:58:03adminsetgithub: 65641
2014-05-06 16:45:01zach.waresetstatus: open -> closed
messages: + msg217995

assignee: zach.ware
resolution: fixed
stage: needs patch -> resolved
2014-05-06 16:43:11python-devsetnosy: + python-dev
messages: + msg217993
2014-05-06 16:11:58tim.goldensetmessages: + msg217992
2014-05-06 13:21:35zach.waresetnosy: + tim.golden
2014-05-06 13:21:16zach.waresetmessages: + msg217980
2014-05-05 19:16:52zach.warecreate