Issue #21442: Fix MSVC compiler warning introduced by issue21377.